# bullion

./: CMakeLists.txt  readme.md
c_cpp/: .clang-format  CMakeLists.txt
c_cpp/goldsrc/: CMakeLists.txt  readme.md
c_cpp/goldsrc/common_headers/: CMakeLists.txt
c_cpp/goldsrc/player_movement/: CMakeLists.txt
c_cpp/goldsrc/player_movement/configure/: pm_export.h.in
c_cpp/goldsrc/player_movement/include/: pm_basictypes.h  pm_debug.h  pm_defs.h  pm_info.h  pm_materials.h  pm_movevars.h  pm_shared.h  pmtrace.h
c_cpp/goldsrc/player_movement/include/steam/: steamtypes.h
c_cpp/goldsrc/player_movement/src/: const.h  in_buttons.h  mathlib.h  pm_debug.c  pm_math.c  pm_shared.c  posix_string.h
c_cpp/goldsrc/player_movement/target_shared/: CMakeLists.txt
c_cpp/goldsrc/player_movement/target_static/: CMakeLists.txt
cmake/: compile_settings.cmake  export_header_template.in  project_definitions.cmake  static_shared_lib_utils.cmake
csharp/goldsrc/: CMakeLists.txt
csharp/goldsrc/player_movement/: CMakeLists.txt
csharp/goldsrc/player_movement/configure/: Directory.Build.props.in
csharp/goldsrc/player_movement/private/: Defs.cs  LibInterface.cs  LibTypes.cs
csharp/goldsrc/player_movement/public/: EngineCallbacks.cs  Interface.cs
package/: package.json
